--- a/deploy.yml
+++ b/deploy.yml
@@ -1,36 +1,34 @@
 ---
 - hosts: aws_ec2
-  connection: ssh
-  user: ubuntu
   become: yes
-  
+  remote_user: ubuntu
   vars:
     ansible_ssh_private_key_file: "/root/ansible/pem.pem"
-    ansible_ssh_user: "ubuntu"
+
   tasks:
-   - name: install apache2
-     apt:
-       name = apache2
-       state = present
-      
-   - name: install git
-     apt:
-       name = git
-       state = present
-      
-   - name: remove default path
-     file:
-       path: /var/www/
-       state: absent
+    - name: install apache2
+      apt:
+        name: apache2
+        state: present
 
-  - name: deploy code
-    git:
-      repo: "https://github.com/devops0014/staticsite-docker.git"
-      dest: /var/www/
-      update: yes
-      version: master
+    - name: install git
+      apt:
+        name: git
+        state: present
 
-  - name: start apache2
-    service:
-      name: apache2
-      state: started
+    - name: remove default path
+      file:
+        path: /var/www/
+        state: absent
+
+    - name: deploy code
+      git:
+        repo: "https://github.com/devops0014/staticsite-docker.git"
+        dest: /var/www/
+        update: yes
+        version: master
+
+    - name: start apache2
+      service:
+        name: apache2
+        state: started
