--- a/deploy.yml
+++ b/deploy.yml
@@ -2,8 +2,10 @@
 - hosts: aws_ec2
   become: yes
   remote_user: ubuntu
+  connection: ssh
   vars:
     ansible_ssh_private_key_file: "/root/ansible/pem.pem"
+    ansible_ssh_user: "ubuntu"
 
   tasks:
     - name: install apache2
